--- a/BlackduckNugetInspector/BlackduckNugetInspector.csproj
+++ b/BlackduckNugetInspector/BlackduckNugetInspector.csproj
@@ -16,6 +16,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="tools\**\*">
+      <Pack>true</Pack>
+      <PackagePath>tools\</PackagePath>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="15.8.166" />
     <PackageReference Include="Mono.Options" Version="5.3.0.1" />
     <PackageReference Include="NuGet.Client" Version="4.2.0" />
