--- a/BlackduckNugetInspector/BlackduckNugetInspector.csproj
+++ b/BlackduckNugetInspector/BlackduckNugetInspector.csproj
@@ -13,6 +13,10 @@
 
     <Company>Synopsys</Company>
 
+    <AssemblyVersion>0.0.5.0</AssemblyVersion>
+
+    <FileVersion>0.0.5.0</FileVersion>
+
   </PropertyGroup>
 
   <ItemGroup>
