--- a/BlackduckNugetInspector/BlackduckNugetInspector.csproj
+++ b/BlackduckNugetInspector/BlackduckNugetInspector.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Com.Synopsys.Integration.Nuget</RootNamespace>
 
     <PackageOutputPath>./nupkg</PackageOutputPath>
@@ -27,7 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build" Version="15.8.166" />
+    <PackageReference Include="Microsoft.Build" Version="16.0.461">
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Build.Locator" Version="1.2.2" />
     <PackageReference Include="Mono.Options" Version="5.3.0.1" />
     <PackageReference Include="NuGet.Client" Version="4.2.0" />
     <PackageReference Include="NuGet.ProjectModel" Version="4.8.0" />
