--- a/BlackduckNugetInspector/BlackduckNugetInspector.csproj
+++ b/BlackduckNugetInspector/BlackduckNugetInspector.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -7,16 +6,19 @@
 
     <PackageOutputPath>./nupkg</PackageOutputPath>
 
-    <Version>0.0.12</Version>
+    <Version>0.0.13</Version>
 
     <Authors>Synopsys</Authors>
 
     <Company>Synopsys</Company>
 
-    <AssemblyVersion>0.0.12.0</AssemblyVersion>
+    <AssemblyVersion>0.0.13.0</AssemblyVersion>
 
-    <FileVersion>0.0.12.0</FileVersion>
+    <FileVersion>0.0.13.0</FileVersion>
 
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,9 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build" Version="15.9.20">
-      <ExcludeAssets>runtime</ExcludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Build" Version="15.9.20" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.2.2" />
     <PackageReference Include="Mono.Options" Version="5.3.0.1" />
     <PackageReference Include="NuGet.Client" Version="4.2.0" />
