Enabling DisableMSBuildAssemblyCopyCheck to silence MSBuild error since I want to include it.

--- a/BlackduckNugetInspector/BlackduckNugetInspector.csproj
+++ b/BlackduckNugetInspector/BlackduckNugetInspector.csproj
@@ -16,6 +16,7 @@
 
     <FileVersion>0.0.13.0</FileVersion>
 
+    <DisableMSBuildAssemblyCopyCheck>true</DisableMSBuildAssemblyCopyCheck>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE</DefineConstants>
