feat: Throwing exception when errors are encountered unless ignore failures is set.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ packages/
 .vs
 blackduck/
 BlackduckNugetInspector/nupkg/
+BlackduckNugetInspector/artifactory/
+BlackduckNugetInspector/inspecot/
+BlackduckNugetInspector/tools/
+BlackduckNugetInspector/publish-output/
+.swip/
+BlackduckNugetInspector/output/
